--- a/Pix2Pix/Bw2Color_Pix2Pix.ipynb
+++ b/Pix2Pix/Bw2Color_Pix2Pix.ipynb
@@ -6,18 +6,7 @@
     "colab": {
       "name": "Bw2Color_Pix2Pix",
       "provenance": [],
-      "collapsed_sections": [
-        "MTfkcyJ_-DWs",
-        "kHiFF-bs-rLZ",
-        "_0HBzw8aGTbx",
-        "T2KSN6z0JwLb",
-        "tGpWRqs5HfMo",
-        "DFn-Km-6L0Vi",
-        "KmXZgz7mUAJk",
-        "xBhWK4ERJu0Z",
-        "TzxH87tzT7UH",
-        "7S3GYQrknuVt"
-      ]
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -42,7 +31,7 @@
       "source": [
         "!pip install -q -U progressbar2"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -70,7 +59,7 @@
         "matplotlib.use('Agg')\n",
         "plt.ioff()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -94,7 +83,7 @@
         "#FOlder containing the datasets.\n",
         "BASE_PATH = '/content/drive/My Drive/Bw2Color'"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -113,14 +102,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "47MZB9LMvgLQ",
-        "outputId": "a1218808-78ed-40ec-a67f-237596fd5260"
+        "outputId": "1565bfc2-556c-4f8e-e89d-7cb76a832ebc"
       },
       "source": [
         "#mount the drive.\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +131,7 @@
         "!unzip -q Train.zip\n",
         "!rm Train.zip"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -156,7 +145,7 @@
         "!unzip -q Val.zip\n",
         "!rm Val.zip"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -255,7 +244,7 @@
         "\n",
         "  return tf.reshape(srgb_pixels, tf.shape(lab))\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -343,7 +332,7 @@
         "\n",
         "  return img_rgb"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -396,7 +385,7 @@
         "\n",
         "  return L, AB, file_path\n",
         " \n",
-        " \"\"\"\n",
+        "\"\"\"\n",
         "Load an image and apply the preprocess step without the data augmentation.\n",
         "Return a tuple made of the luminance channel L and the path of the image.\n",
         " \"\"\"\n",
@@ -406,7 +395,7 @@
         "  #load image as RGB.\n",
         "  img = load(file_path)\n",
         "  #Convert the image to LAB Space.\n",
-        "  lab_img = convert2lab(img).\n",
+        "  lab_img = convert2lab(img)\n",
         "  #Nomalise the values so that they are in the range [-1, -1]\n",
         "  lab_img = normalise(lab_img)\n",
         "  #Extract the L channel.\n",
@@ -430,7 +419,7 @@
         "                          .batch(BATCH_SIZE)\\\n",
         "                          .prefetch(AUTOTUNE)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -488,7 +477,7 @@
         "\n",
         "  return x"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -550,7 +539,7 @@
         "  #return the model.\n",
         "  return Model(inputs=inputs, outputs=output)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -610,7 +599,7 @@
         "  #return the model.\n",
         "  return Model(inputs=[inp, tar], outputs=last)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -643,7 +632,7 @@
         "#define the optimzer for the discriminator.\n",
         "discriminator_optimizer = tf.keras.optimizers.Adam(0.0002, beta_1=0.5)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -667,7 +656,7 @@
         " \n",
         "  return total_gen_loss, gan_loss, l1_loss"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -684,15 +673,14 @@
         "  real_loss = loss_object(tf.ones_like(disc_real_output), disc_real_output)\n",
         "  \n",
         "  #adversarial loss associated to the fake data.\n",
-        "  generated_loss = loss_object(tf.ones_like(» t)*-1.0, disc_generated_output)\n",
+        "  generated_loss = loss_object(tf.ones_like(disc_generated_output)*-1.0, disc_generated_output)\n",
         " \n",
         "  \n",
         "  total_disc_loss = real_loss + generated_loss\n",
         " \n",
-        "  return total_disc_loss * 0.5\n",
-        "plot some images during"
+        "  return total_disc_loss * 0.5\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -766,7 +754,7 @@
         "      \n",
         "  fig.savefig(save_path, bbox_inches='tight', aspect='auto')"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -808,7 +796,7 @@
         "#define the discrimnator.\n",
         "discriminator = define_discriminator([IMG_SIZE, IMG_SIZE, 1], [IMG_SIZE, IMG_SIZE, 2])"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -825,7 +813,7 @@
         "summary_writer = tf.summary.create_file_writer(\n",
         "  log_dir + \"fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -874,7 +862,7 @@
         "    tf.summary.scalar('gen_l1_loss', l1_loss, step=epoch)\n",
         "    tf.summary.scalar('disc_loss', disc_loss, step=epoch)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -885,7 +873,6 @@
       "source": [
         "#Define a checkpoint-manager in order to save the model weights during the training so that after the\n",
         "#training the model that yielded the best result can be restored.\n",
-        "checkpoint_dir = \n",
         "checkpoints = tf.train.Checkpoint(generator_optimizer=generator_optimizer,\n",
         "                                 discriminator_optimizer=discriminator_optimizer,\n",
         "                                 generator=generator,\n",
@@ -893,7 +880,7 @@
         "                                 current_epoch=tf.Variable(0))\n",
         "manager = tf.train.CheckpointManager(checkpoints, f'{BASE_PATH}/checkpoints', max_to_keep=8)"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -964,7 +951,7 @@
         "    #clear the output of the cell.\n",
         "    clear_output()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1040,15 +1027,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "vL-qF9JDu8ku"
+      },
+      "source": [
+        "generator.summary()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "JJnI8dtVTYWg"
       },
       "source": [
         "#download the test dataset.\n",
-        "shutil.copy(f'{BASE_PATH}/checkpoints/Test.zip', \".\")\n",
+        "shutil.copy(f'{BASE_PATH}/Test.zip', \".\")\n",
         "!unzip -q Test.zip\n",
         "!rm Test.zip"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1063,7 +1061,7 @@
         "                          .batch(BATCH_SIZE)\\\n",
         "                          .prefetch(AUTOTUNE)\n",
         "\n",
-        "#generate the colorization of the images in the traiining dataset.\n",
+        "#generate the colorization of the images in the training dataset.\n",
         "for Ls, _, file_paths in test_dataset:\n",
         "\n",
         "  fake_ABs = generator.predict(Ls)\n",
