fixed commentin  Pix2Pix notebook

--- a/Pix2Pix/Bw2Color_Pix2Pix.ipynb
+++ b/Pix2Pix/Bw2Color_Pix2Pix.ipynb
@@ -80,7 +80,7 @@
         "OUTPUT_CHANNELS = 2\n",
         "#Lambda value of the generator function\n",
         "LAMBDA = 10\n",
-        "#FOlder containing the datasets.\n",
+        "#Folder containing the datasets.\n",
         "BASE_PATH = '/content/drive/My Drive/Bw2Color'"
       ],
       "execution_count": 6,
@@ -610,7 +610,7 @@
       "source": [
         "# Losses and Optimzer\n",
         "\n",
-        "The loss function of the cGAN is LSGAN which replaces the binary cross entropy in the vanilla GAN loss with the Mean Absolute Error. So The objective of Generator and Discrminator are:\n",
+        "The loss function of the cGAN is LSGAN which replaces the binary cross entropy in the vanilla GAN loss with the Mean Squared Error. So The objective of Generator and Discrminator are:\n",
         "$$\n",
         "\\begin{aligned}\n",
         "            L_{cGAN}(D) = &\\mathbb{E}_{x, y}[(D(x, y) - 1)^2] + \\mathbb{E}_{x}[(D(x, G(x)) +1)^2] \\\\\n",
